# pipe_operator

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  release.yml
pipe_operator/: __init__.py
tests/: test.py
