[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe-operator"
version = "0.1.0"
description = "Creates piped wrappers around the `operator` module. Uses the `pipe` package (https://github.com/JulienPalard/Pipe)."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "CaptainQuack" }
]
keywords = ["pipe", "operator", "functional", "pipeline", "wrappers", "stdlib"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "pipe>=2,<3",
]

[tool.setuptools]
# Use automatic package discovery

[tool.setuptools.packages.find]
where = ["."]
include = ["pipe_operator*"]
exclude = ["tests*"]
